# painelcovid19.github.io

./: .env  .gitignore  Pipfile  README.md  equipe.html  index.html  pyproject.toml  rt.html  sobre.html  vacinas.html
.github/workflows/: accumulated_data.yml  actions.yml  acumulate_data.yml  cities_data.yml  data_macro_bahia.yml  html.yml  (+7 more)
covid_br/: get_accumulated_data.py  get_acumalete_data.ipynb  get_def_cases.ipynb  get_df_campis.ipynb  get_df_cases.py  get_macroregion_data.py
css/: style.css
data/: df_cidades_campi.csv  df_cidades_rt.csv  df_dados_acumulados.csv  df_dados_macro_regioes.csv  df_dados_macro_regioes_bahia.csv  df_dados_macro_regioes_baiha.csv  df_dados_macro_regioes_ceara.csv  df_dados_vacinas.csv  df_vacinas_STF.csv  df_vacinas_acarape.csv  df_vacinas_redencao.csv  last_update_dates.csv  vaccines-ACARAPE-CE.csv  vaccines-REDENCAO-CE.csv  vaccines-SAO FRANCISCO DO CONDE-BA.csv  vaccines-acarape-ce.csv  vaccines-redencao-ce.csv  vaccines-sao-francisco-do-conde-ba.csv
dt/: df_dados_acumulados.csv
new_scripts/: get_acumulate_data.py  get_brasil_io_data.py  get_macro_regions_data.py
notebooks/: Cities within radius.ipynb
scripts/: calculate_rt.py  dados_macro_regioes.py  get_brasil_io_data.py  get_brasil_io_data_new.py  get_macro_regioes_data_bahia.py  get_macro_regioes_data_baiha.py  get_macro_regioes_data_ceara.py  get_vaccination_data.py  html.py  macro_regioes.py  main.py  rt_html.py  script.js  vacinas.py  vacinas_html.py
shapefiles/: BA_Municipios_2020.dbf  BA_Municipios_2020.shx  CE_Municipios_2020.dbf  CE_Municipios_2020.shx
(+1 files in other folders)
