[tool.poetry]
name = "painelcovid19.github.io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"
plotly = "^4.14.3"
pandas = "^1.2.4"
dominate = "^2.6.0"
gdal = {path = "dependencies/GDAL-3.2.3-cp38-cp38-win_amd64.whl"}
fiona = {path = "dependencies/Fiona-1.8.19-cp38-cp38-win_amd64.whl"}
pyproj = {path = "dependencies/pyproj-3.0.1-cp38-cp38-win_amd64.whl"}
rtree = {path = "dependencies/Rtree-0.9.7-cp38-cp38-win_amd64.whl"}
shapely = {path = "dependencies/Shapely-1.7.1-cp38-cp38-win_amd64.whl"}
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99 # override black's default line-length

[tool.isort]
# make it compatible with black
profile = "black" 